--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,11 +5,10 @@
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
-    <div>
-    {%- if site.author -%}
-      {{ site.author | escape }}
-    {%- endif -%}
-    </div>
+    <div>Computer Science Projects</div>
+    <div>2021-22</div>
+    <div>Marlborough School</div>
+    <div>Dr. Kessner</div>
 
     <br/>
     <hr/>
