--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,6 +1,6 @@
 
 <div class="trigger">
-    <a class="page-link" href="{{ "/hello" | relative_url }}">Hello</a>
+    <a class="page-link" href="{{ "/project_ideas" | relative_url }}">Project Ideas</a>
     <a class="page-link" href="{{ "/about" | relative_url }}">About</a>
 </div>
          
