cleaned up hello_html, added to menu

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,5 +2,7 @@
 <div class="trigger">
     <a class="page-link" href="{{ "/project_ideas" | relative_url }}">Project Ideas</a>
     <a class="page-link" href="{{ "/about" | relative_url }}">About</a>
+    <br/><hr/><br/>
+    <a class="page-link" href="{{ "/hello_html" | relative_url }}">Hello HTML</a>
 </div>
          
