--- a/_sass/dkstyle.scss
+++ b/_sass/dkstyle.scss
@@ -55,6 +55,10 @@ code {
     font-family: 'ComicMono', 'Courier New',  monospace;
 }
 
+code, .highlight {
+    background-color: #eee;
+}
+
 body {
     font-family: Georgia, serif;
 }
