--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -4,5 +4,6 @@
     <a class="page-link" href="{{ "/about" | relative_url }}">About</a>
     <br/><hr/><br/>
     <a class="page-link" href="{{ "/hello_html" | relative_url }}">Hello HTML</a>
+    <a class="page-link" href="{{ "/hello_p5" | relative_url }}">Hello p5</a>
 </div>
          
