--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,5 +5,6 @@
     <br/><hr/><br/>
     <a class="page-link" href="{{ "/hello_html" | relative_url }}">Hello HTML</a>
     <a class="page-link" href="{{ "/hello_p5" | relative_url }}">Hello p5</a>
+    <a class="page-link" href="{{ "/visual_novels" | relative_url }}">Visual novels</a>
 </div>
          
