added processing-p5-convert and particles demo

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,9 @@
     <script src="{{ "/js/handlers.js" | relative_url }}"></script>
     <script src="{{ "/js/suppressDefaultKeyEventHandling.js" | relative_url }}"></script>
 
+    <script src="{{ "/js/processing-p5-convert-bundle.js" | relative_url }}"></script>
+    <script src="{{ "/js/processing-p5-convert-bootstrap.js" | relative_url }}"></script>
+
     <!-- katex -->
 
     <link rel="stylesheet" href="{{ "katex/katex.min.css" | relative_url }}" integrity="sha384-RZU/ijkSsFbcmivfdRBQDtwuwVqK7GMOw6IMvKyeWL2K5UAlyp6WonmB8m7Jd0Hn" crossorigin="anonymous">
