--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -7,5 +7,6 @@
     <a class="page-link" href="{{ "/hello_p5" | relative_url }}">Hello p5</a>
     <a class="page-link" href="{{ "/visual_novels" | relative_url }}">Visual novels</a>
     <a class="page-link" href="{{ "/particles" | relative_url }}">Particle generators</a>
+    <a class="page-link" href="{{ "/hello_sound" | relative_url }}">Hello sound</a>
 </div>
          
