--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -8,5 +8,6 @@
     <a class="page-link" href="{{ "/visual_novels" | relative_url }}">Visual novels</a>
     <a class="page-link" href="{{ "/particles" | relative_url }}">Particle generators</a>
     <a class="page-link" href="{{ "/hello_sound" | relative_url }}">Hello sound</a>
+    <a class="page-link" href="{{ "/hello_3d" | relative_url }}">Hello 3d</a>
 </div>
          
