added unix command line page

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -9,5 +9,6 @@
     <a class="page-link" href="{{ "/particles" | relative_url }}">Particle generators</a>
     <a class="page-link" href="{{ "/hello_sound" | relative_url }}">Hello sound</a>
     <a class="page-link" href="{{ "/hello_3d" | relative_url }}">Hello 3d</a>
+    <a class="page-link" href="{{ "/unix_command_line" | relative_url }}">Unix / command line data analysis</a>
 </div>
          
