--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -10,5 +10,7 @@
     <a class="page-link" href="{{ "/hello_sound" | relative_url }}">Hello sound</a>
     <a class="page-link" href="{{ "/hello_3d" | relative_url }}">Hello 3d</a>
     <a class="page-link" href="{{ "/unix_command_line" | relative_url }}">Unix / command line data analysis</a>
+    <br/><hr/><br/>
+    <a class="page-link" href="{{ "/python_intro" | relative_url }}">Intro to Python</a>
 </div>
          
